--- a/NCloud/NCloud/appsettings.json
+++ b/NCloud/NCloud/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SqlServerConnection": "Data Source=(localdb)\\MSSQLLocalDB;initial catalog=NCloudCore;Trusted_Connection=True;MultipleActiveResultSets=True"
+  }
 }
