--- a/NCloud/NCloud/appsettings.json
+++ b/NCloud/NCloud/appsettings.json
@@ -5,6 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "AssetRoute": "/",
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "SqlServerConnection": "Data Source=(localdb)\\MSSQLLocalDB;initial catalog=NCloudCore;Trusted_Connection=True;MultipleActiveResultSets=True"
