--- a/NCloud/NCloud/NCloud.csproj
+++ b/NCloud/NCloud/NCloud.csproj
@@ -23,5 +23,9 @@
 		</PackageReference>
 		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.14" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="wwwroot\utilities\" />
+	</ItemGroup>
 	
 </Project>
