--- a/NCloud/NCloud/NCloud.csproj
+++ b/NCloud/NCloud/NCloud.csproj
@@ -25,6 +25,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Content Update="wwwroot\utilities\arrow-left-circle.svg">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </Content>
 	  <Content Update="wwwroot\utilities\arrow-repeat.svg">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </Content>
