--- a/NCloud/NCloud/appsettings.json
+++ b/NCloud/NCloud/appsettings.json
@@ -9,5 +9,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "SqlServerConnection": "Data Source=(localdb)\\MSSQLLocalDB;initial catalog=NCloudCore;Trusted_Connection=True;MultipleActiveResultSets=True"
-  }
+  },
+  "EncryptionKey": "K5X82r8ywSaTXSPzLfscch04Jl3q6piF"
 }
