--- a/NCloud/NCloud/NCloud.csproj
+++ b/NCloud/NCloud/NCloud.csproj
@@ -28,7 +28,8 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.16" />
-		<PackageReference Include="TinyMCE" Version="6.7.0" />
+		<PackageReference Include="NToastNotify" Version="8.0.0" />
+		<PackageReference Include="TinyMCE" Version="6.7.2" />
 	</ItemGroup>
 
 	<ItemGroup>
