--- a/NCloud/NCloud/appsettings.Development.json
+++ b/NCloud/NCloud/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AssetRoute": "/",
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SqlServerConnection": "Data Source=(localdb)\\MSSQLLocalDB;initial catalog=NCloudCore;Trusted_Connection=True;MultipleActiveResultSets=True"
+  },
+  "EncryptionKey": "K5X82r8ywSaTXSPzLfscch04Jl3q6piF"
 }
