ne connection string added

--- a/NCloud/NCloud/appsettings.json
+++ b/NCloud/NCloud/appsettings.json
@@ -8,7 +8,9 @@
   "AssetRoute": "/",
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SqlServerConnection": "Data Source=(localdb)\\MSSQLLocalDB;initial catalog=NCloudCore;Trusted_Connection=True;MultipleActiveResultSets=True"
+    "SqlServerConnection": "Data Source=(localdb)\\MSSQLLocalDB;initial catalog=NCloudCore;Trusted_Connection=True;MultipleActiveResultSets=True",
+    "SQLiteConnection": "Data Source=database.db"
+  
   },
   "EncryptionKey": "K5X82r8ywSaTXSPzLfscch04Jl3q6piF"
 }
