new database migration made

--- a/NCloud/NCloud/appsettings.json
+++ b/NCloud/NCloud/appsettings.json
@@ -8,7 +8,7 @@
   "AssetRoute": "/",
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SqlServerConnection": "Data Source=(localdb)\\MSSQLLocalDB;initial catalog=NCloudCore;Trusted_Connection=True;MultipleActiveResultSets=True",
+    "SQLServerConnection": "Data Source=(localdb)\\MSSQLLocalDB;initial catalog=NCloudCore;Trusted_Connection=True;MultipleActiveResultSets=True",
     "SQLiteConnection": "Data Source=database.db"
   
   },
