--- a/NCloud/NCloud/Services/Resources/text-document-extensions.json
+++ b/NCloud/NCloud/Services/Resources/text-document-extensions.json
@@ -1,83 +1,1 @@
-{
-  "1st ": " Plain Text Document\n",
-  "600 ": " Plain Text Document\n",
-  "602 ": " Text602 (T602) document\n",
-  "abw ": " AbiWord document\n",
-  "acl ": " MS Word AutoCorrect List\n",
-  "afp ": " Advanced Function Presentation\n",
-  "ami ": " Lotus Ami Pro\n",
-  "ans ": " American National Standards Institute (ANSI) text\n",
-  "asc ": " ASCII text\n",
-  "aww ": " Ability Write\n",
-  "ccf ": " Color Chat 1.0\n",
-  "csv ": " Comma",
-  "cwk ": " ClarisWorks",
-  "dbk ": " DocBook XML sub",
-  "dita ": " Darwin Information Typing Architecture document\n",
-  "doc ": " Microsoft Word document\n",
-  "docm ": " Microsoft Word macro",
-  "docx ": " Office Open XML document\n",
-  "dot ": " Microsoft Word document template\n",
-  "dotx ": " Office Open XML text document template\n",
-  "dwd ": " DavkaWriter Heb/Eng word processor file\n",
-  "egt ": " EGT Universal Document\n",
-  "epub ": " EPUB open standard for e",
-  "ezw ": " Reagency Systems easyOFFER document\n",
-  "fdx ": " Final Draft\n",
-  "ftm ": " Fielded Text Meta\n",
-  "ftx ": " Fielded Text (Declared)\n",
-  "gdoc ": " Google Drive Document\n",
-  "guide ": " AmigaGuide\n",
-  "html, htm ": " HyperText Markup Language\n",
-  "hwp ": " Haansoft (Hancom) Hangul Word Processor document\n",
-  "hwpml ": " Haansoft (Hancom) Hangul Word Processor Markup Language document\n",
-  "log ": " Text log file\n",
-  "lwp ": " Lotus Word Pro\n",
-  "mbp ": " metadata for Mobipocket documents\n",
-  "md ": " Markdown text document\n",
-  "me ": " Plain Text Document\n",
-  "mcw ": " Microsoft Word for Macintosh\n",
-  "mobi ": " Mobipocket documents\n",
-  "nb ": " Nota Bene Document\n",
-  "nbp ": " Mathematica Player Notebook\n",
-  "neis ": " (Student Record Writing Program) Document\n",
-  "nt ": " N",
-  "nq ": " N",
-  "odm ": " OpenDocument master document\n",
-  "odoc ": " Synology Drive Office Document\n",
-  "odt ": " OpenDocument text document\n",
-  "osheet ": " Synology Drive Office Spreadsheet\n",
-  "ott ": " OpenDocument text document template\n",
-  "omm ": " OmmWriter text document\n",
-  "pages ": " Apple Pages document\n",
-  "pap ": " Papyrus word processor document\n",
-  "per ": " Canadian Forces Personnel Appraisal System (CFPAS) Personnel Evaluation Report (PER)\n",
-  "pdr ": " Canadian Forces Personnel Appraisal System (CFPAS) Personnel Development Report (PDR)\n",
-  "pdax ": " Portable Document Archive (PDA) document index file\n",
-  "pdf ": " Portable Document Format\n",
-  "quox ": " Question Object File Format for Quobject Designer or Quobject Explorer\n",
-  "rtf ": " Rich Text document\n",
-  "rpt ": " Crystal Reports\n",
-  "sdw ": " StarWriter text document, used in earlier versions of StarOffice\n",
-  "se ": " Shuttle Document\n",
-  "stw ": " OpenOffice.org XML text document template\n",
-  "sxw ": " OpenOffice.org XML text document\n",
-  "tex ": " TeX\n",
-  "tmdx ": " SoftMaker TextMaker\n",
-  "info ": " Texinfo\n",
-  "troff ": " Unix OS document processing system\n",
-  "txt ": " ASCII or Unicode plain text file\n",
-  "uof ": " Uniform Office Format\n",
-  "uoml ": " Unique Object Markup Language\n",
-  "via ": " Revoware VIA Document Project File\n",
-  "wpd ": " WordPerfect document\n",
-  "wps ": " Microsoft Works document\n",
-  "wpt ": " Microsoft Works document template\n",
-  "wrd ": " WordIt! document\n",
-  "wrf ": " ThinkFree Write\n",
-  "wri ": " Microsoft Write document\n",
-  "xhtml ": " eXtensible HyperText Markup Language\n",
-  "xht ": " eXtensible HyperText Markup Language\n",
-  "xml ": " eXtensible Markup Language\n",
-  "xps ": " Open XML Paper Specification"
-}
+{"1st": "Plain Text Document", "600": "Plain Text Document", "602": "Text602 (T602) document", "abw": "AbiWord document", "acl": "MS Word AutoCorrect List", "afp": "Advanced Function Presentation", "ami": "Lotus Ami Pro", "ans": "American National Standards Institute (ANSI) text", "asc": "ASCII text", "aww": "Ability Write", "ccf": "Color Chat 1.0", "csv": "Comma", "cwk": "ClarisWorks", "dbk": "DocBook XML sub", "dita": "Darwin Information Typing Architecture document", "doc": "Microsoft Word document", "docm": "Microsoft Word macro", "docx": "Office Open XML document", "dot": "Microsoft Word document template", "dotx": "Office Open XML text document template", "dwd": "DavkaWriter Heb/Eng word processor file", "egt": "EGT Universal Document", "epub": "EPUB open standard for e", "ezw": "Reagency Systems easyOFFER document", "fdx": "Final Draft", "ftm": "Fielded Text Meta", "ftx": "Fielded Text (Declared)", "gdoc": "Google Drive Document", "guide": "AmigaGuide", "html, htm": "HyperText Markup Language", "hwp": "Haansoft (Hancom) Hangul Word Processor document", "hwpml": "Haansoft (Hancom) Hangul Word Processor Markup Language document", "log": "Text log file", "lwp": "Lotus Word Pro", "mbp": "metadata for Mobipocket documents", "md": "Markdown text document", "me": "Plain Text Document", "mcw": "Microsoft Word for Macintosh", "mobi": "Mobipocket documents", "nb": "Nota Bene Document", "nbp": "Mathematica Player Notebook", "neis": "(Student Record Writing Program) Document", "nt": "N", "nq": "N", "odm": "OpenDocument master document", "odoc": "Synology Drive Office Document", "odt": "OpenDocument text document", "osheet": "Synology Drive Office Spreadsheet", "ott": "OpenDocument text document template", "omm": "OmmWriter text document", "pages": "Apple Pages document", "pap": "Papyrus word processor document", "per": "Canadian Forces Personnel Appraisal System (CFPAS) Personnel Evaluation Report (PER)", "pdr": "Canadian Forces Personnel Appraisal System (CFPAS) Personnel Development Report (PDR)", "pdax": "Portable Document Archive (PDA) document index file", "pdf": "Portable Document Format", "quox": "Question Object File Format for Quobject Designer or Quobject Explorer", "rtf": "Rich Text document", "rpt": "Crystal Reports", "sdw": "StarWriter text document, used in earlier versions of StarOffice", "se": "Shuttle Document", "stw": "OpenOffice.org XML text document template", "sxw": "OpenOffice.org XML text document", "tex": "TeX", "tmdx": "SoftMaker TextMaker", "info": "Texinfo", "troff": "Unix OS document processing system", "txt": "ASCII or Unicode plain text file", "uof": "Uniform Office Format", "uoml": "Unique Object Markup Language", "via": "Revoware VIA Document Project File", "wpd": "WordPerfect document", "wps": "Microsoft Works document", "wpt": "Microsoft Works document template", "wrd": "WordIt! document", "wrf": "ThinkFree Write", "wri": "Microsoft Write document", "xhtml": "eXtensible HyperText Markup Language", "xht": "eXtensible HyperText Markup Language", "xml": "eXtensible Markup Language", "xps": "Open XML Paper Specification"}
