--- a/.gitignore
+++ b/.gitignore
@@ -79,6 +79,8 @@ _[Ss]cripts
 /NCloud/NCloud/TextFile.txt
 /NCloud/NCloud/database.db-shm
 /NCloud/NCloud/database.db-wal
-/NCloud/NCloud/.__Logs__
-/NCloud/NCloud/.__CloudData__
-/NCloud/NCloud/.__TempFiles__
+*/NCloud/NCloud/.__Logs__
+*/NCloud/NCloud/.__CloudData__
+*/NCloud/NCloud/.__TempFiles__
+*.__Logs__
+*.__Logs__*
