manual testing bugfixes for add new file

--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,4 @@ _[Ss]cripts
 */NCloud/NCloud/.__TempFiles__
 *.__Logs__
 *.__Logs__*
+/NCloud/NCloud/.__CloudData__/Private/03fc99ac-c177-42ab-a4e8-258c9ce9a0fe
