--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,4 @@ _[Ss]cripts
 *.__Logs__
 *.__Logs__*
 /NCloud/NCloud/.__CloudData__/Private/03fc99ac-c177-42ab-a4e8-258c9ce9a0fe
+/NCloud/NCloud/.__CloudData__/Private/793a7b51-dead-4fbb-a724-93708b705ed3/Music/Documents
