changes in login and register regexes

--- a/NCloud/NCloud/appsettings.json
+++ b/NCloud/NCloud/appsettings.json
@@ -13,5 +13,5 @@
 
   },
   "EncryptionKey": "K5X82r8ywSaTXSPzLfscch04Jl3q6piF",
-  "AdminPassword": "Admin_1234"
+  "AdminPassword": "Admin!1234"
 }
