--- a/NCloud/NCloud/Properties/launchSettings.json
+++ b/NCloud/NCloud/Properties/launchSettings.json
@@ -7,7 +7,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://192.168.0.17:7159;http://localhost:5261"
+      "applicationUrl": "https://localhost:7159;http://localhost:5261"
     },
     "IIS Express": {
       "commandName": "IISExpress",
