--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,5 @@ _[Ss]cripts
 *.__Logs__*
 /NCloud/NCloud/.__CloudData__/Private/03fc99ac-c177-42ab-a4e8-258c9ce9a0fe
 /NCloud/NCloud/.__CloudData__/Private/793a7b51-dead-4fbb-a724-93708b705ed3/Music/Documents
+/NCloud/NCloud/.__CloudData__/Private/a207081c-48ca-4a40-9112-e77a23aaea31
+/NCloud/Release-win-x64/Services/Resources/coding-extensions.json
