Admin dashboard created for admins

--- a/NCloud/NCloud/NCloud.csproj
+++ b/NCloud/NCloud/NCloud.csproj
@@ -42,6 +42,9 @@
 			<ExcludeFromSingleFile>true</ExcludeFromSingleFile>
 			<CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
 		</Content>
+		<Content Update="wwwroot\utilities\admin-dashboard.svg">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
 		<Content Update="wwwroot\utilities\arrow-left-circle.svg">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
@@ -281,6 +284,9 @@
 		</Content>
 		<Content Update="wwwroot\utilities\trash.svg">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+		<Content Update="wwwroot\utilities\user-add.svg">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
 		<Content Update="wwwroot\utilities\window.svg">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
