--- a/NCloud/NCloud/appsettings.json
+++ b/NCloud/NCloud/appsettings.json
@@ -13,5 +13,14 @@
 
   },
   "EncryptionKey": "K5X82r8ywSaTXSPzLfscch04Jl3q6piF",
-  "AdminPassword": "Admin!1234"
+  "AdminPassword": "Admin!1234",
+  "Branding": {
+    "AppName": "NCloudDrive",
+    "LogoPath": "/branding/cloud-logo.png",
+    "LogoNoTextPath": "/branding/cloud-logo-no-text.png"
+  },
+  "EmailCredentials": {
+    "Email": "dev.profile.km@gmail.com",
+    "Password": ""
+  }
 }
