--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,4 @@ _[Ss]cripts
 /NCloud/NCloud/.__CloudData__/Private/793a7b51-dead-4fbb-a724-93708b705ed3/Music/Documents
 /NCloud/NCloud/.__CloudData__/Private/a207081c-48ca-4a40-9112-e77a23aaea31
 /NCloud/Release-win-x64/Services/Resources/coding-extensions.json
+/NCloud/NCloud/appsettings.json
