new icons added

--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,4 @@ _[Ss]cripts
 /NCloud/NCloud/.__CloudData__/Private/a207081c-48ca-4a40-9112-e77a23aaea31
 /NCloud/Release-win-x64/Services/Resources/coding-extensions.json
 /NCloud/NCloud/appsettings.json
+/NCloud/NCloud/.__CloudData__/Private/a7c8c695-d4d2-4273-afe5-9adef0cece32/19182527 (1).pdf
